test: StationAcceptanceTest 중복 코드 메서드 분리 및 테스트 로직 점검